# vscode-diff.nvim

./: .clangd  .gitignore  .luarc.json  AGENTS.md  CMakeLists.txt  DEVELOPMENT_DIARY.md  Makefile  README.md  VSCODE_DIFF_MVP_IMPLEMENTATION_PLAN.md  build-vscode-diff.sh  build.cmd  build.sh  test_diff_comparison.sh  test_interactive.sh  verify_file_io.sh  vscode-diff.mjs.bak
.github/instructions/: dev-docs.instructions.md  docs.instructions.md  tests.instructions.md
c-diff-core/: CMakeLists.txt  Makefile  default_lines_diff_computer.c  diff_core.c  diff_core.h  diff_tool.c
c-diff-core/algorithms/: myers.c
c-diff-core/include/: char_level.h  diff_api.h  myers.h  optimize.h  platform.h  print_utils.h  refine.h  render_plan.h  sequence.h  types.h  utf8_utils.h  utils.h
c-diff-core/src/: char_level.c  line_level.c  myers.c  optimize.c  print_utils.c  range_mapping.c  refine.c  render_plan.c  sequence.c  string_hash_map.c  utf8_utils.c  utf8_utils.c.backup  utf8_utils.h  utils.c
c-diff-core/tests/: test_char_boundary_categories.c  test_char_level.c  test_compute_diff.c  test_dp_algorithm.c  test_infrastructure.c  test_integration.c  test_line_boundary_scoring.c  test_line_optimization.c  test_myers.c  test_optimize.c  test_range_mapping.c  test_refine.c  test_render_plan.c  test_sequence.c  test_utils.h
dev-doc/: diff-parity-notes.md
dev-docs/: AUDIT_REPORT.md  BUILD_VSCODE_DIFF.md  CROSS_PLATFORM_COMPATIBILITY.md  DEVELOPMENT_DIARY.md  EXECUTIVE_SUMMARY_HEADER_INCLUDES.md  FILLER_LINE_FIX.md  HEADER_INCLUDE_INVESTIGATION_SUMMARY.md  HEADER_INCLUDE_QUICK_REFERENCE.md  README.md  VSCODE_ADVANCED_DIFF_IMPLEMENTATION_PLAN.md  c-diff-core-fixes-comprehensive.md  column-offset-investigation.md  final-fix-summary.md  final-rendering-fix.md  git-integration-implementation.md  header-include-best-practices-research.md  header-include-patterns-comparison.md  header-include-refactoring-proposal.md  priority-fix-the-real-issue.md  render-rewrite-summary.md  sequence-utf8-refactoring.md  simplified-rendering-algorithm.md  vscode-extraction-summary.md
dev-docs/advanced-diff/: DEV_LOG.md  LINE_LEVEL_REFACTOR.md  README.md  STEP1_MYERS_ALGORITHM_DEVLOG.md  STEP2_STEP3_CONSOLIDATED_DEVLOG.md  STEP2_STEP3_DEVLOG.md  STEP4_CHAR_REFINEMENT_DEVLOG.md  STEP4_FINAL_DEVLOG.md  VSCODE_ADVANCED_DIFF_IMPLEMENTATION_PLAN.md
dev-docs/advanced-diff/midterm-evaluation/: BOUNDARY_SCORING_HASH_PARITY_GAP.md  midterm-evaluation-en.md  word-extension-parity-fix.md
dev-docs/advanced-diff/midterm-evaluation-after-fix/: advanced-diff-parity-midterm-en.md  parity-fix-translate-preference.md
dev-docs/advanced-diff/midterm-evaluation-last/: advanced-diff-midterm-eval.en.md
dev-docs/advanced-diff/midterm-evaluation/column-translation/: COLUMN_TRANSLATION_FIX.md  SUMMARY.md
dev-docs/advanced-diff/midterm-evaluation/dp-myers/: DP_MYERS_IMPLEMENTATION.md  SCORING_CALLBACK_ANALYSIS.md
dev-docs/advanced-diff/midterm-evaluation/hash-boundary/: HASH_BOUNDARY_FIX.md  SUMMARY.md
dev-docs/advanced-diff/parity-fixes/: CHAR_BOUNDARY_SCORING_FIX.md
dev-docs/lua/render/: color-scheme-fix.md  render-lua-evolution.md  understanding-extmark-layering.md
dev-docs/lua/tree/: file-sidebar-recommendation.md  neotree-flexibility-analysis.md
docs/: BUILD.md  DIFF_NOTATION.md  README.md  RENDER_PLAN.md  VERSION_MANAGEMENT.md  filler-line-algorithm.md  git-integration.md  rendering-quick-reference.md
libvscode-diff/: .gitattributes  CMakeLists.txt  Makefile  build.cmd.in  build.sh.in  default_lines_diff_computer.c
libvscode-diff/include/: char_level.h  default_lines_diff_computer.h  line_level.h  myers.h  platform.h  range_mapping.h  string_hash_map.h
libvscode-diff/src/: char_level.c  diff_api.c  line_level.c  myers.c  optimize.c  print_utils.c  range_mapping.c  render_plan.c  sequence.c  string_hash_map.c  utils.c
libvscode-diff/tests/: test_char_boundary_categories.c  test_char_level.c  test_compute_diff.c  test_dp_algorithm.c  test_line_boundary_scoring.c  test_line_optimization.c  test_myers.c  test_range_mapping.c  test_render_plan.c  test_sequence.c  test_utils.h
lua/vscode-diff/: commands.lua  config.lua  diff.lua  git.lua  init.lua  render.lua
plugin/: vscode-diff.lua
scripts/: build-vscode-diff.sh  bump_version.mjs  test_diff_comparison.sh
tests/: README.md  e2e_test.lua  run_all.sh  run_tests.sh  test_autoscroll.lua  test_ffi_integration.lua  test_filler.lua  test_git_integration.lua  test_render.lua
tests/e2e/: run_all.sh  run_case.lua
tests/e2e/fixtures/char_level/: right.txt
tests/e2e/fixtures/multi_change/: left.txt  right.txt
tests/fixtures/: file_a.txt  file_b.txt
tests/unit/: run_all.sh  test_char_diff.lua  test_constants.lua  test_filler.lua  test_render_plan.lua  test_version.lua
